# gameolife

./: README.md  pyproject.toml
src/gameolife/: __init__.py  cell.py  cli.py  grid.py
