
[build-system]
requires = ['flit-core >= 3.4']
build-backend = 'flit_core.buildapi'

[project]
name = 'gameolife'
dynamic = ['version', 'description']
readme = 'README.md'
requires-python = '>= 3.8'
license.file = 'LICENSE'
authors = [{ name = 'Rafael Silva', email = 'perigoso@riseup.net' }]
classifiers = [
    'Development Status :: 1 - Planning',
    'Environment :: Console :: Curses',
    'Intended Audience :: Education',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Games/Entertainment :: Simulation',
    'Topic :: Scientific/Engineering :: Artificial Life',
]
urls.homepage = 'https://github.com/perigoso/gameolife'
dependencies = []

[project.scripts]
codacoa-report-effort = 'gameolife.cli:main'

[tool.ruff]
src = ['src']
line-length = 100

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
extend-select = [
    'W',   # pycodestyle
    'C90', # mccabe
    'I',   # isort
    'UP',  # pyupgrade
    'YTT', # flake8-2020
    'B',   # flake8-bugbear
    'A',   # flake8-builtins
    'C4',  # flake8-comprehensions
    'T20', # flake8-pyi
    'PT',  # flake8-pytest-style
    'PGH', # pygrep-hooks
    'RUF', # ruff
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2
